add something new

--- a/www/index.html
+++ b/www/index.html
@@ -38,14 +38,7 @@
     </nav>
 
     <main role="main" class="container">
-      <div class="card">
-        <div class="card-body">
-          <div class="embed-responsive embed-responsive-16by9" id="myContent">
-          </div>
-          <footer class="blockquote-footer">
-            <cite title="Source Title">Source: SPPW Glosariusz (<a href="#" id="myPDFLink">PDF</a>)</cite>
-            <!-- <a class="float-right text-muted font-italic" href="#">Girish</a></footer> -->
-        </div>
+      <div class="embed-responsive" id="myContent">
       </div>
     </main>
 
