add something new

--- a/www/index.html
+++ b/www/index.html
@@ -38,10 +38,17 @@
     </nav>
 
     <main role="main" class="container">
-      <div class="embed-responsive" id="myContent">
+      <div class="card">
+        <div class="card-body">
+          <div class="embed-responsive embed-responsive-16by9" id="myContent">
+          </div>
+          <footer class="blockquote-footer">
+            <cite title="Source Title">Source: SPPW Glosariusz </cite>
+            <a class="float-right text-muted font-italic" href="#">Girish</a></footer>
+        </div>
       </div>
     </main>
-
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
