add something new

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar-top-fixed.css">
     <link rel="icon" href="favicon.ico" type="image/png">
-    <link href="https://fonts.googleapis.com/css?family=Grenze&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700&display=swap" rel="stylesheet">
     <title>SPPW Glosariusz Finanse Rachunkowość Bankowość Dictionary of Finance Accounting Banking Terms</title>
   </head>
   
@@ -18,7 +18,7 @@
 
     <!-- glosariusz-pojec-z-dziedziny-rachunkowosci-finansow-bankowosci -->
     
-    <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #eaedff";>  <!-- dfe0ff -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #2366a2;">  <!-- dfe0ff -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,9 +32,12 @@
           </form>
         </div>
       </div>
-      <a class="navbar-brand" href="#"><span style="font-family: 'Grenze', serif;">
-          Polish English Glossary of Finance Terms
-      </span></a>
+      <a class="navbar-brand" href="#">
+        <!-- <span style="font-family: 'Grenze', serif;"> -->
+        <span style="font-family: 'Amaranth', sans-serif;">
+          <small>Polish English<br><font color="#dedede">Finance Glossary</font></small>
+        </span>
+      </a>
     </nav>
 
     <main role="main" class="container">
@@ -44,7 +47,7 @@
           </div>
           <footer class="blockquote-footer">
             <cite title="Source Title">Source: SPPW Glosariusz </cite>
-            <a class="float-right text-muted font-italic" href="#">Girish</a></footer>
+            <!-- <a class="float-right text-muted font-italic" href="#">Girish</a></footer> -->
         </div>
       </div>
     </main>
@@ -55,7 +58,6 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/md5.js"></script>
     <script src="js/livesearch.js"></script>
    </body>
 
