--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/bootstrap-dark1.min.css">
     <link rel="stylesheet" href="css/navbar-top-fixed.css">
     <link rel="icon" href="favicon.ico" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700&display=swap" rel="stylesheet">
@@ -18,7 +19,8 @@
 
     <!-- glosariusz-pojec-z-dziedziny-rachunkowosci-finansow-bankowosci -->
     
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #2366a2;">  <!-- dfe0ff -->
+    <!--<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #2366a2;"> --> <!-- dfe0ff -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">  <!-- dfe0ff -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +37,7 @@
       <a class="navbar-brand" href="#">
         <!-- <span style="font-family: 'Grenze', serif;"> -->
         <span style="font-family: 'Amaranth', sans-serif;">
-          <small>Polish English<br><font color="#dedede">Finance Glossary</font></small>
+          <small><b>Polish English</b><br>Finance Glossary</small>
         </span>
       </a>
     </nav>
