--- a/www/index.html
+++ b/www/index.html
@@ -21,34 +21,6 @@
     
     <!-- glosariusz-pojec-z-dziedziny-rachunkowosci-finansow-bankowosci -->
     
-    <!--<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #2366a2;"> --> <!-- dfe0ff -->
-    <!-- <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">  --> 
-      <!--
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="dropdown" id="myDropdown">
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2 dropdown-toggle" id="mySearch" type="text" placeholder="Search" aria-label="Search"
-                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="dropdown-menu shadow" id="myDropdownMenu">
-            </div>
-          </form>
-        </div>
-      </div>
-
-          <a class="navbar-brand" href="#">
-            <span style="font-family: 'Amaranth', sans-serif;">
-              <small><b>Polish English</b><br>Dictionary of Finance</small>
-            </span>
-          </a>
-
-      -->
-      <!-- (add up to 12, xs is phone, sm is tablet, col-x extra small) 
-           https://www.w3schools.com/bootstrap/bootstrap_grid_examples.asp -->
-      <!-- https://getbootstrap.com/docs/4.1/layout/grid/ -->
-
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary fixed-top justify-content-between">
 
       <div class="dropdown" id="myDropdown">
@@ -84,8 +56,8 @@
         <div class="card-body">
           <iframe id="myIframe" style="overflow:hidden; width:100%" frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
           <footer class="blockquote-footer">
-            <cite title="Source Title">Źródło: SPPW Glosariusz Rachunkowości, Finansów i Bankowości</cite>
-            <a class="float-right text-muted font-italic" href="#">Contact</a>
+            <cite title="Source Title">Źródło: SPPW Glosariusz</cite>
+            <a class="float-right text-muted font-italic" href="mailto:glosariusz.finansow@gmail.com">Contact</a>
           </footer>
 
         </div>
