--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/glosariusz.css">
     <link rel="stylesheet" href="css/navbar-top-fixed.css">
     <link rel="icon" href="favicon.ico" type="image/png">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700&display=swap" rel="stylesheet">    
     <title>SPPW Glosariusz Finanse Rachunkowość Bankowość Polish-English Dictionary of Finance</title>
   </head>
   
@@ -35,18 +35,16 @@
       
       <a class="navbar-brand" href="#">
         <span style="font-family: 'Amaranth', sans-serif;">
-          <span style="font-size: 0.8rem; line-height: 1;">
-            <table>
-              <tbody>
-                <tr>
-                  <td><b>Polish • English</b></td>
-                </tr>
-                <tr>
-                  <td>Glossary of Finance</td>
-                </tr>
-              </tbody>
-            </table>
-          </span>                  
+          <span style="font-size: 0.75rem; line-height: 1;">
+            <table><tbody>
+                <tr><td style="text-align: center;">
+                    <b style="font-size: 0.8rem;">Polish • English</b>
+                </td></tr>
+                <tr><td>
+                    Dictionary of Finance
+                </td></tr>
+            </tbody> </table>
+          </span>
         </span>
       </a>
 
