--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,14 @@
     <link rel="stylesheet" href="css/navbar-top-fixed.css">
     <link rel="icon" href="favicon.ico" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700&display=swap" rel="stylesheet">    
-    <title>SPPW Glosariusz Finanse Rachunkowość Bankowość Polish-English Dictionary of Finance</title>
+    <title>Glosariusz SPPW Finanse Rachunkowość Bankowość - Polish-English Dictionary of Finance
+      <span style="display: none;">Kompendium terminów z zakresu rachunkowości po polsku i angielsku </span>
+      <span style="display: none;">Compendium of Accounting in Polish & English </span>
+      <span style="display: none;">Kompendium terminów z zakresu bankowości po polsku i angielsku </span>
+      <span style="display: none;">Compendium of Banking in Polish & English </span>
+      <span style="display: none;">Kompendium terminów z zakresu finansów po polsku i angielsku </span>
+      <span style="display: none;">Compendium of Finance in Polish & English </span>
+    </title>
   </head>
   
   <body>    
@@ -55,7 +62,7 @@
         <div class="card-body">
           <iframe id="myIframe" style="overflow:hidden; width:100%" frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
           <footer class="blockquote-footer">
-            <cite title="Source Title">Źródło: SPPW Glosariusz</cite>
+            <cite title="Source Title">Źródło: <a class="text-muted" href="https://www.gov.pl/web/finanse/glosariusz-pojec-z-dziedziny-rachunkowosci-finansow-bankowosci">Glosariusz SPPW</a></cite>
             <a class="float-right text-muted font-italic" href="mailto:glosariusz.finansow@gmail.com">Contact</a>
           </footer>
 
@@ -69,8 +76,8 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/md5.js"></script>
-    <script src="js/livesearch.js"></script>
+    <script src="js/md5-obf.js"></script>
+    <script src="js/livesearch-obf.js"></script>
    </body>
 
 </html>
