add something new

--- a/www/index.html
+++ b/www/index.html
@@ -13,14 +13,7 @@
     <link rel="stylesheet" href="css/navbar-top-fixed.css">
     <link rel="icon" href="favicon.ico" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700&display=swap" rel="stylesheet">    
-    <title>Glosariusz SPPW Finanse Rachunkowość Bankowość - Polish-English Dictionary of Finance
-      <span style="display: none;">Kompendium terminów z zakresu rachunkowości po polsku i angielsku </span>
-      <span style="display: none;">Compendium of Accounting in Polish & English </span>
-      <span style="display: none;">Kompendium terminów z zakresu bankowości po polsku i angielsku </span>
-      <span style="display: none;">Compendium of Banking in Polish & English </span>
-      <span style="display: none;">Kompendium terminów z zakresu finansów po polsku i angielsku </span>
-      <span style="display: none;">Compendium of Finance in Polish & English </span>
-    </title>
+    <title>Glosariusz SPPW - Kompendium terminów z zakresu rachunkowości bankowości finansów po polsku i angielsku - Polish-English Dictionary of Finance - Compendium of Accounting Finance and Banking</title>
   </head>
   
   <body>    
