--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
           <iframe id="myIframe" style="overflow:hidden; width:100%" frameborder="0" scrolling="no" onload="resizeIframe(this)"></iframe>
           <footer class="blockquote-footer">
             <cite title="Source Title">Źródło: <a class="text-muted" href="https://www.gov.pl/web/finanse/glosariusz-pojec-z-dziedziny-rachunkowosci-finansow-bankowosci">Glosariusz SPPW</a></cite>
-            <a class="float-right text-muted font-italic" href="mailto:glosariusz.finansow@gmail.com">Contact</a>
+            <a class="float-right text-muted font-italic" href="mailto:girish.w.polsce@gmail.com?subject=Glosariusz Finansow">Contact</a>
           </footer>
 
         </div>
